Untouched copypasted code

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ runIde {
     //ideaDirectory '/Applications/PhpStorm.app/Contents'
 }
 
-group 'com.taptima'
+group 'ru.taptima'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -22,7 +22,11 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version '2020.1.1'
-    plugins 'com.jetbrains.php:201.7223.91'
+    plugins = [
+            'com.jetbrains.php:201.7223.91',
+            'org.jetbrains.plugins.phpstorm-remote-interpreter:201.7223.18'
+            ]
+
 }
 patchPluginXml {
     changeNotes """
