Fix IDE version support

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ runIde {
 }
 
 group 'ru.taptima'
-version '1.0.1-SNAPSHOT'
+version '1.0.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -21,6 +21,7 @@ dependencies {
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
     version '2020.1.1'
+    updateSinceUntilBuild false
     plugins = [
             'com.jetbrains.php:201.7223.91',
             'org.jetbrains.plugins.phpstorm-remote-interpreter:201.7223.18'
