Separate PhalyfusionGlobalInspection from PhalyfusionValidationInspection
PhalyfusionGlobalInspection is used for batch inspections, "Analyse code" action or "Run inspection by name" action (or just a button in toolbar). It launches Phalyfusion for all files in one run (in multiple runs at Windows).

PhalyfusionValidationInspection is used to highlight cached problems from PhalyfusionGlobalInspection on-fly. Yet there is a special setting "Launch Phalyfusion in on-fly mode" to make it run Phalyfusion tool by itself on-fly

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -54,25 +54,18 @@
         <projectService serviceImplementation="ru.taptima.phalyfusion.issues.IssueCacheManager"/>
         <localInspection language="PHP"
                          shortName="PhalyfusionValidation"
-                         displayName="Phalyfusion validation"
+                         displayName="Phalyfusion on-fly validation"
                          groupPath="PHP"
                          groupName="Quality tools"
-                         enabledByDefault="false"
+                         enabledByDefault="true"
                          level="WEAK WARNING"
-                         cleanupTool="true"
+                         cleanupTool="false"
                          implementationClass="ru.taptima.phalyfusion.PhalyfusionValidationInspection"/>
-<!--        <localInspection-->
-<!--                language="PHP"-->
-<!--                shortName="PhalyfusionHighlighting"-->
-<!--                displayName="Phalyfusion highlighting"-->
-<!--                groupPath="PHP"-->
-<!--                groupName="Quality tools"-->
-<!--                unfair="true"-->
-<!--                implementationClass="ru.taptima.phalyfusion.PhalyfusionHighlightingInspection"/>-->
         <globalInspection
                 language="PHP"
                 shortName="PhalyfusionGlobal"
-                displayName="Phalyfusion global"
+                displayName="Phalyfusion global validation"
+                enabledByDefault="true"
                 groupPath="PHP"
                 groupName="Quality tools"
                 cleanupTool="true"
