--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.intellij' version '0.4.21'
+    id 'org.jetbrains.intellij' version '0.7.3'
 }
 
 runIde {
@@ -8,28 +8,37 @@ runIde {
 }
 
 group 'ru.taptima'
-version '1.0.3-SNAPSHOT'
+version '1.0.4-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+runPluginVerifier {
+    ideVersions = [
+            'IU-2020.1.1',
+            'IU-2020.1.4',
+            'IU-2020.3.4',
+            'IU-2021.1.2',
+    ]
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+patchPluginXml {
+    version '1.0.4-SNAPSHOT'
+    sinceBuild '181'
+    untilBuild '213'
+}
+
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version 'IU-2020.1.1'
-    updateSinceUntilBuild false
+    updateSinceUntilBuild true
+    version 'IU-2021.1.2'
     plugins = [
-            'com.jetbrains.php:201.7223.91',
-            'org.jetbrains.plugins.phpstorm-remote-interpreter:201.7223.18'
+            'com.jetbrains.php:211.7442.50',
+            'org.jetbrains.plugins.phpstorm-remote-interpreter:211.6693.65'
             ]
-
-}
-patchPluginXml {
-    changeNotes """
-      Work in progress!
-      """
 }
